求二叉树到叶子节点的最大距离

--- a/tree/Makefile
+++ b/tree/Makefile
@@ -1,8 +1,11 @@
-test:main.c tree.o
-	gcc -g -o test main.c tree.o
+test:main.c tree.o maxDistance.o
+	gcc -g -o test main.c tree.o maxDistance.o
 
 tree.o:tree.c
 	gcc -g -c -o tree.o tree.c
 
+maxDistance:maxDistance.c
+	gcc -g -c -o maxDistance.o maxDistance.c
+
 clean:
-	rm -f test tree.o
+	rm -f test tree.o maxDistance.o
